--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Hoax News</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title">BOGA</string>
+    <string name="text1">Let\'s Get Started</string>
+    <string name="welcome">Selamat Datang di…</string>
 </resources>
