--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="title">BOGA</string>
     <string name="text1">Let\'s Get Started</string>
     <string name="welcome">Selamat Datang di…</string>
+    <string name="deskripsi">Mulai sekarang untuk merasakan \nfitur dari aplikasi BOGA</string>
+    <string name="usernam">Nama</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 </resources>
