--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Hoax News</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title">BOGA</string>
+    <string name="text1">Let\'s Get Started</string>
+    <string name="welcome">Selamat Datang di…</string>
+    <string name="deskripsi">Mulai sekarang untuk merasakan \nfitur dari aplikasi BOGA</string>
+    <string name="usernam">Nama</string>
+    <string name="password">Password</string>
+    <string name="daftar">Daftar</string>
+    <string name="login">Login</string>
+    <string name="register">Tidak punya akun? <a href="google.com">Daftar</a> </string>
+    <string name="masuk">Sudah punya akun? <a href="google.com">Masuk</a> </string>
 </resources>
