Update tampilan layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="text1">Let\'s Get Started</string>
     <string name="welcome">Selamat Datang di…</string>
     <string name="deskripsi">Mulai sekarang untuk merasakan \nfitur dari aplikasi BOGA</string>
-    <string name="usernam">Nama</string>
-    <string name="password">Password</string>
+    <string name="usernam">E-mail</string>
+    <string name="password">Kata Sandi</string>
     <string name="daftar">Daftar</string>
-    <string name="login">Login</string>
+    <string name="login">Masuk</string>
     <string name="register">Tidak punya akun? <a href="google.com">Daftar</a> </string>
     <string name="masuk">Sudah punya akun? <a href="google.com">Masuk</a> </string>
 </resources>
